compiler/testData/cli/jvm/fileClassAndFacadeClash.out
compiler/testData/cli/jvm/fileClassAndFacadeClash.kt:1:1: error: duplicate JVM class name 'test/TestPackage' generated from: package-fragment test, package-fragment test
@file:JvmName("TestPackage")
^
COMPILATION_ERROR