compiler/testData/cli/jvm/fileClassAndFacadeClash.kt
@file:JvmName("TestPackage")
package test

fun foo() {}